--- a/index.html
+++ b/index.html
@@ -125,23 +125,23 @@
 <!-- Third Parallax Image with Portfolio Text -->
 <div class="bgimg-3 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
+     <span class="w3-xxlarge w3-text-white w3-wide outline">CONTACT</span>
   </div>
 </div>
 
 <!-- Container (Contact Section) -->
-<div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">WHERE WE WORK</h3>
+<div class="w3-content w3-container w3-padding-64 w3-center" id="contact">
+  <h3 class="w3-center">WHERE WE WORK </h3>
   <p class="w3-center"><em>We would love your feedback!</em></p>
 
   <div class="w3-row w3-padding-32 w3-section">
    
    <!-- Google Maps Container-->
-    <div class="w3-col m4 w3-container">
+    <div class="w3-col m4 w3-container w3-center">
       <!-- Add Google Maps -->
       <div id="googleMap" class="w3-round-large w3-greyscale" style="width:100%;height:400px;"></div>
     </div>
-    <div class="w3-col m8 w3-panel" style="text-align:cente">
+    <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Los Angeles, US<br>
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: some #<br>
@@ -157,8 +157,6 @@
   <div class="w3-xlarge w3-section">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
 </footer>
  
