--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </div>
 
 <!-- Container (Contact Section) -->
-<div class="w3-content w3-container w3-padding-64 w3-center" id="contact">
+<div class="w3-content w3-container w3-padding-64" id="contact">
   <h3 class="w3-center">WHERE WE WORK </h3>
   <p class="w3-center"><em>We would love your feedback!</em></p>
 
@@ -138,14 +138,13 @@
    
    <!-- Google Maps Container-->
     <div class="w3-col m4 w3-container w3-center">
-      <!-- Add Google Maps -->
-      <div id="googleMap" class="w3-round-large w3-greyscale" style="width:100%;height:400px;"></div>
+      <div id="googleMap" class="w3-round-large w3-greyscale" style="width:100%;height:200px;"></div>
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Los Angeles, US<br>
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: some #<br>
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: some email<br>
+        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: balalalalaaa@yahoo.com<br>
       </div>
     </div>
   </div>
@@ -155,8 +154,10 @@
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
+   <!--Facebook icon-->
+    <a href="https://www.facebook.com/Baymax-358911144516755/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+    <!--Instagram icon-->
+    <a href="https://www.instagram.com/baymaxlahacks18/?hl=en"><i class="fa fa-instagram w3-hover-opacity"></i></a>
   </div>
 </footer>
  
