--- a/index.html
+++ b/index.html
@@ -42,10 +42,6 @@
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">About</h3>
   <p class="w3-center" style="font-size:20px"><em>Baymax is your personal mental health assistant</em></p>
-  <!--<p class ="w3-center">Do you ever feel like you need emotional support? <br>
-                        Ever wanted a virtual hug or somebody to check up on you? <br>
-                        What about somebody to call you when you want someone to talk to you? <br>
-                        Daily reminders or someone to be mingle with and still be single for Valentines...Christmas.......maybe all holidays?</p> -->
   <p style="text-align:left"><em></em></p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
@@ -142,9 +138,9 @@
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Los Angeles, US<br>
+          <a href="https://www.lacity.org"><i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i></a> Los Angeles, US<br>
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: some #<br>
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: balalalalaaa@yahoo.com<br>
+          <a href="mailto:balalalalaaa@yahoo.com"><i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i></a> Email: balalalalaaa@yahoo.com<br>
       </div>
     </div>
   </div>
