Fixed weird formatting of Contacts section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-        <p style="text-align:center"><strong><em>Welcome to Baymax, a personal mental health assistant whose job is to make sure that you are being the best you possible.</em></strong> How did we come up with this idea? We were introduced to many insightful and impactful companies through live demonstrations and their amazing APIs. Afterwards, we decided to integrate Google Cloud Platform's API, Twilio's API, and Alexa's API in order to complete our project. <strong><em>The amazing thing about Baymax is that it is able to detect and formulate predictions about a user's mental health based off of his or her response to a question.</em></strong>
+        <p style="text-align:center"><strong><em>Welcome to Baymax, a personal mental health assistant whose job is to make sure that you are being the best you possible.</em></strong> How did we come up with this idea? We were introduced to many insightful and impactful companies through live demonstrations and their amazing APIs. Afterwards, we decided to integrate Google Cloud Platform's API, Twilio's API, and Alexa's API in order to complete our project. <strong><em>The amazing thing about Baymax is that it is able to detect and formulate predictions about a user's mental health based off of his or her responses to a question.</em></strong>
       </p>
     </div>
   </div>
@@ -133,12 +133,12 @@
   <div class="w3-row w3-padding-32 w3-section">
    
    <!-- Google Maps Container-->
-    <div class="w3-col m4 w3-container w3-center">
+    <div class="w3-col m4 w3-container w3-center" style="padding-left:30px">
       <div id="googleMap" class="w3-round-large w3-greyscale" style="width:100%;height:200px;"></div>
     </div>
-    <div class="w3-col m8 w3-panel">
+    <div class="w3-col m8 w3-panel w3-center">
       <div class="w3-large w3-margin-bottom">
-          <a href="https://www.lacity.org"><i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i></a> Los Angeles, US<br>
+          <br><a href="https://www.lacity.org"><i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i></a>Los Angeles, US<br>
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: some #<br>
           <a href="mailto:balalalalaaa@yahoo.com"><i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i></a> Email: balalalalaaa@yahoo.com<br>
       </div>
