--- a/index.html
+++ b/index.html
@@ -64,6 +64,32 @@
   </div>
 </div> 
 
+<!-- Container (About Section) -->
+<div class="w3-content w3-container w3-padding-64" id="about">
+  <h3 class="w3-center">About</h3>
+  <p class="w3-center" style="font-size:20px"><em>Baymax is your personal mental health assistant</em></p>
+  <p style="text-align:left"><em></em></p>
+  <div class="w3-row">
+    <div class="w3-col m6 w3-center w3-padding-large">
+      <p><b><i class="fa fa-user w3-margin-right"></i>Baymax</b></p><br>
+      <img src="baymax4.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Baymax" width="150" height="200">
+    </div>
+
+    <!-- Hide this text on small devices -->
+    <div class="w3-col m6 w3-hide-small w3-padding-large">
+        <p style="text-align:center"><strong><em>Welcome to Baymax, a personal mental health assistant whose job is to make sure that you are being the best you possible.</em></strong> How did we come up with this idea? We were introduced to many insightful and impactful companies through live demonstrations and their amazing APIs. Afterwards, we decided to integrate Google Cloud Platform's API, Twilio's API, and Alexa's API in order to complete our project. <strong><em>The amazing thing about Baymax is that it is able to detect and formulate predictions about a user's mental health based off of his or her responses to a question.</em></strong>
+      </p>
+    </div>
+  </div>
+</div>
+
+<!-- Third Parallax Image with Portfolio Text -->
+<div class="bgimg-4 w3-display-container w3-opacity-min">
+  <div class="w3-display-middle">
+     <span class="w3-xxlarge w3-text-white w3-wide outline">CONTACT</span>
+  </div>
+</div>
+
 <!-- Container (Picture Section) -->
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
   <h3 class="w3-center"></h3>
