--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
     </a>
     <a href="#home" class="w3-bar-item w3-button">HOME</a>
     <a href="#about" class="w3-bar-item w3-button w3-hide-small"> ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"> PURPOSE</a>
+    <a href="#purpose" class="w3-bar-item w3-button w3-hide-small"> PURPOSE</a>
+    <a href="#progresspic" class="w3-bar-item w3-button w3-hide-small"> PROGRESS PICTURES</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"> CONTACT</a>
   </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
     <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
+    <a href="#purpose" class="w3-bar-item w3-button" onclick="toggleFunction()">PURPOSE</a>
+    <a href="#progresspic" class="w3-bar-item w3-button" onclick="toggleFunction()">PROGRESS PICTURES</a>
     <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
   </div>
 </div>
@@ -34,7 +36,7 @@
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" style="width:100%" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Baymax</span>
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">BAYMAX</span>
   </div>
 </div>
 
@@ -60,13 +62,13 @@
 <!-- Second Parallax Image with Purpose Text -->
 <div class="bgimg-2 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-    <span class="outline w3-xxlarge w3-text-white w3-wide ">Purpose</span>
+    <span class="outline w3-xxlarge w3-text-white w3-wide ">PURPOSE</span>
   </div>
 </div> 
 
-<!-- Container (About Section) -->
-<div class="w3-content w3-container w3-padding-64" id="about">
-  <h3 class="w3-center">About</h3>
+<!-- Container (Purpose Section) -->
+<div class="w3-content w3-container w3-padding-64" id="purpose">
+  <h3 class="w3-center">Purpose</h3>
   <p class="w3-center" style="font-size:20px"><em>Baymax is your personal mental health assistant</em></p>
   <p style="text-align:left"><em></em></p>
   <div class="w3-row">
@@ -83,15 +85,15 @@
   </div>
 </div>
 
-<!-- Third Parallax Image with Portfolio Text -->
+<!-- Third Parallax Image with Progress Pictures Text -->
 <div class="bgimg-4 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide outline">CONTACT</span>
+     <span class="w3-xxlarge w3-text-white w3-wide outline">PROGRESS PICTURES</span>
   </div>
 </div>
 
 <!-- Container (Picture Section) -->
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
+<div class="w3-content w3-container w3-padding-64" id="progresspic">
   <h3 class="w3-center"></h3>
   <p class="w3-center">Progress Pictures<em>.<br> Click on the images to make them bigger</em></p><br>
 
