Finished purpose section

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="main.css">
 
-<!-- Link to main css file -->
-    <link rel="stylesheet" href="main.css">
 <body>
 
 <!-- Navbar (sit on top) -->
@@ -48,12 +47,12 @@
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Baymax</b></p><br>
-      <img src="baymax4.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Baymax" width="150" height="200">
+      <img src="baymax4.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Baymax" width="171" height="200">
     </div>
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-        <p style="text-align:center"><strong><em>Welcome to Baymax, a personal mental health assistant whose job is to make sure that you are being the best you possible.</em></strong> How did we come up with this idea? We were introduced to many insightful and impactful companies through live demonstrations and their amazing APIs. Afterwards, we decided to integrate Google Cloud Platform's API, Twilio's API, and Alexa's API in order to complete our project. <strong><em>The amazing thing about Baymax is that it is able to detect and formulate predictions about a user's mental health based off of his or her responses to a question.</em></strong>
+        <p style="text-align:center"><strong><em>Welcome to Baymax, a personal mental health assistant whose job is to make sure that you are being the best you possible.</em></strong> How did we come up with this idea? We were introduced to many insightful and impactful companies through live demonstrations and their amazing APIs. Afterwards, we decided to integrate Google Cloud Platform's API, Twilio's API, and Alexa's API in order to complete our project. <strong><em>The amazing thing about Baymax is that it is able to detect and formulate predictions about a user's mental health based off of his or her responses to questions.</em></strong>
       </p>
     </div>
   </div>
@@ -68,20 +67,21 @@
 
 <!-- Container (Purpose Section) -->
 <div class="w3-content w3-container w3-padding-64" id="purpose">
-  <p style="text-align:center"><strong>"According to the National Institute of Mental Health"</strong></p>
+  <p style="text-align:center"><strong>"According to the National Institute of Mental Health"</strong></p><br>
   <p style="text-align:left"><em>An estimated 16.2 million adults in the United States had at least one major depressive episode. This number represented 6.7% of all U.S. adults.</em></p><br>
   <p style="text-align:left"><em>In 2016, an estimated 10.3 million U.S. adults aged 18 or older had at least one major depressive episode with severe impairment. This number represented 4.3% of all U.S. adults.</em></p>
   <div class="w3-row">
    
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-        <p style="text-align:center"><strong><em>Welcome to Baymax, a personal mental health assistant whose job is to make sure that you are being the best you possible.</em></strong> How did we come up with this idea? We were introduced to many insightful and impactful companies through live demonstrations and their amazing APIs. Afterwards, we decided to integrate Google Cloud Platform's API, Twilio's API, and Alexa's API in order to complete our project. <strong><em>The amazing thing about Baymax is that it is able to detect and formulate predictions about a user's mental health based off of his or her responses to a question.</em></strong>
+        <p style="text-align:center"><strong>Purpose of Baymax</strong></p>
+        <p style="text-align:center">Baymax is primarily used to check up on people's everyday mental state, asking them how their day is and determining how they are feeling at the moment. By identifying their past and current mental state, we are able to track and alleviate their emotional pain. Likewise, Amazon Echo makes it easy for users to interact with Alexa and Baymax in answering a few easy questions. <br><br> <strong><em>Tomorrow’s a new day, to make it better than yesterday</em></strong>
       </p>
     </div>
     
      <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Baymax</b></p><br>
-      <img src="baymax4.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Baymax" width="150" height="200">
+      <img src="baymax6.png" class="w3-round w3-image w3-hover-opacity-off" alt="Photo of Baymax" width="400" height="600" style="border-radius:40px">
     </div>
   </div>
 </div>
@@ -98,7 +98,7 @@
   <h3 class="w3-center"></h3>
   <p class="w3-center" style="font-size:18px"><em>Click on the images to make them bigger</em></p><br>
 
-  <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
+  <!--  -->
   <div class="w3-row-padding w4-center">
     <div class="w3-col m4">
       <img src="work6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Ryan and Victor working through the night | 3/31/18 | 6:22AM">
@@ -165,10 +165,12 @@
     <div class="w3-col m4 w3-container w3-center" style="padding-left:30px">
       <div id="googleMap" class="w3-round-large w3-greyscale" style="width:100%;height:200px;"></div>
     </div>
+    
+    <!-- Contact Information Container-->
     <div class="w3-col m8 w3-panel w3-center">
       <div class="w3-large w3-margin-bottom">
           <br><a href="https://www.lacity.org"><i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i></a>Los Angeles, US<br>
-        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: some #<br>
+          <p><i class="fa fa-phone fa-fw w3-xlarge w3-margin-right"></i> Phone: 1-800-273-8255<br>When you feel like giving up, just remember the reason why you held on for so long</p>
           <a href="mailto:balalalalaaa@yahoo.com"><i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i></a> Email: balalalalaaa@yahoo.com<br>
       </div>
     </div>
@@ -185,12 +187,6 @@
     <a href="https://www.instagram.com/baymaxlahacks18/?hl=en"><i class="fa fa-instagram w3-hover-opacity"></i></a>
   </div>
 </footer>
- 
- <script>
- window.onbeforeunload = function () {
-         window.scrollTo(0,0);
- }
-</script>
 <!-- Add Google Maps -->
 <script>
 function myMap() {
@@ -242,4 +238,3 @@ function toggleFunction() {
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBXhA3KnSQ5kfqu6v4KSwJE0yo-Ujubvg&callback=myMap"></script>
 </body>
 </html>
-
