--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@
     <div class="w3-col m8 w3-panel w3-center">
       <div class="w3-large w3-margin-bottom">
           <br><a href="https://www.lacity.org"><i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i></a>Los Angeles, US<br>
-          <p><i class="fa fa-phone fa-fw w3-xlarge w3-margin-right"></i> Phone: 1-800-273-8255<br>When you feel like giving up, just remember the reason why you held on for so long</p>
+          <i class="fa fa-phone fa-fw w3-xlarge w3-margin-right"></i> Phone: 1-800-273-8255<br>
           <a href="mailto:balalalalaaa@yahoo.com"><i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i></a> Email: balalalalaaa@yahoo.com<br>
+          <a href="https://suicidepreventionlifeline.org" class="lastQuote w3-hover-opacity"><strong><em>When you feel like giving up, just remember the reason why you held on for so long</em></strong></a>
       </div>
     </div>
   </div>
