Added last photo to progress pic section

--- a/Website/index.html
+++ b/Website/index.html
@@ -52,7 +52,7 @@
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-        <p style="text-align:center"><strong><em>Welcome to Baymax, a personal mental health assistant whose job is to make sure that you are being the best you possible.</em></strong> How did we come up with this idea? We were introduced to many insightful and impactful companies through live demonstrations and their amazing APIs. Afterwards, we decided to integrate Google Cloud Platform's API, Twilio's API, and Alexa's API in order to complete our project. <strong><em>The amazing thing about Baymax is that it is able to detect and formulate predictions about a user's mental health based off of his or her responses to questions.</em></strong>
+        <p style="text-align:center"><strong><em>Welcome to Baymax, a personal mental health care assistant, whose job is to make sure that you are being the best you, you can possibly be.</em></strong> How did we come up with this idea? We were introduced to many insightful and impactful companies through their live demonstrations and their amazing APIs. Afterwards, we decided to integrate Google Cloud Platform's API, Twilio's API, Google Firebase's API, Amazon Webservices, and Alexa's API in order to complete our project. <strong><em>Baymax aims to detect and formulate predictions about a user's mental health based off of his or her responses to questions.</em></strong>
       </p>
     </div>
   </div>
@@ -69,13 +69,13 @@
 <div class="w3-content w3-container w3-padding-64" id="purpose">
   <p style="text-align:center"><strong>"According to the National Institute of Mental Health"</strong></p><br>
   <p style="text-align:left"><em>An estimated 16.2 million adults in the United States had at least one major depressive episode. This number represented 6.7% of all U.S. adults.</em></p><br>
-  <p style="text-align:left"><em>In 2016, an estimated 10.3 million U.S. adults aged 18 or older had at least one major depressive episode with severe impairment. This number represented 4.3% of all U.S. adults.</em></p>
+  <p style="text-align:center"><em>In 2016, an estimated 10.3 million U.S. adults aged 18 or older had at least one major depressive episode with severe impairment. This number represented 4.3% of all U.S. adults.</em></p>
   <div class="w3-row">
    
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
         <p style="text-align:center"><strong>Purpose of Baymax</strong></p>
-        <p style="text-align:center">Baymax is primarily used to check up on people's everyday mental state, asking them how their day is and determining how they are feeling at the moment. By identifying their past and current mental state, we are able to track and alleviate their emotional pain. Likewise, Amazon Echo makes it easy for users to interact with Alexa and Baymax in answering a few easy questions. <br><br> <strong><em>Tomorrow’s a new day, to make it better than yesterday</em></strong>
+        <p style="text-align:center">Baymax is primarily used to check up on people's everyday mental state, asking them how their day is and determining how they are feeling at the moment. By identifying their past and current mental states, and storing relevant key words in a database, we are able to track and alleviate their emotional distress. If the user is not near an Amazon Echo, our system will text the user and interact with the user in a similar way as Alexa would and extrapolate relevant information. Likewise, Amazon Echo makes it easy for users to interact with Alexa and Baymax in answering a few easy questions. <br><br> <strong><em>"Tomorrow’s a new day, to make it better than yesterday"</em></strong>
       </p>
     </div>
     
@@ -133,7 +133,7 @@
     </div>
     
     <div class="w3-col m4">
-      <img src="work14.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity paddingTop" alt="Bear closeup">
+      <img src="work18.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity paddingTop" alt="Echo and successful implementation of Twilio's API | 3/31/18 | 9:28PM">
     </div>
   </div>
 </div>
