--- a/Website/index.html
+++ b/Website/index.html
@@ -20,7 +20,7 @@
     <a href="#about" class="w3-bar-item w3-button w3-hide-small"> ABOUT</a>
     <a href="#purpose" class="w3-bar-item w3-button w3-hide-small"> PURPOSE</a>
     <a href="#progresspic" class="w3-bar-item w3-button w3-hide-small"> PROGRESS PICTURES</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"> CONTACT</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"> VISIONARIES</a>
   </div>
 
   <!-- Navbar on small screens -->
@@ -47,7 +47,7 @@
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Baymax</b></p><br>
-      <img src="baymax4.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Baymax" width="171" height="200">
+      <img src="baymax7.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Baymax" width="200" height="200">
     </div>
 
     <!-- Hide this text on small devices -->
@@ -75,13 +75,14 @@
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
         <p style="text-align:center"><strong>Purpose of Baymax</strong></p>
-        <p style="text-align:center">Baymax is primarily used to check up on people's everyday mental state, asking them how their day is and determining how they are feeling at the moment. By identifying their past and current mental states, and storing relevant key words in a database, we are able to track and alleviate their emotional distress. If the user is not near an Amazon Echo, our system will text the user and interact with the user in a similar way as Alexa would and extrapolate relevant information. Likewise, Amazon Echo makes it easy for users to interact with Alexa and Baymax in answering a few easy questions. <br><br> <strong><em>"Tomorrow’s a new day, to make it better than yesterday"</em></strong>
+        <p style="text-align:center">Baymax is primarily used to check up on people's everyday mental state, asking them how their day is and determining how they are feeling at the moment. By identifying their past and current mental states, and storing relevant key words in a database, we are able to track and alleviate their emotional distress. If the user is not near an Amazon Echo, our system will text the user and interact with the user in a similar way as Alexa would and extrapolate relevant information. Likewise, Amazon Echo makes it easy for users to interact with Alexa and Baymax in answering a few easy questions. 
       </p>
+      <p class="quote"><br> <strong><em>"Tomorrow’s a new day, to make it better than yesterday"</em></strong></p>
     </div>
     
      <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Baymax</b></p><br>
-      <img src="baymax6.png" class="w3-round w3-image w3-hover-opacity-off" alt="Photo of Baymax" width="400" height="600" style="border-radius:40px">
+      <img src="baymax6.png" class="w3-round w3-image w3-hover-opacity-off" alt="Photo of Baymax" width="500" height="700" style="border-radius:40px">
     </div>
   </div>
 </div>
@@ -147,17 +148,22 @@
   </div>
 </div>
 
-<!-- Third Parallax Image with  Text -->
+<!-- Third Parallax Image with Visionary text -->
 <div class="bgimg-4 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide outline">CONTACT</span>
+     <span class="w3-xxlarge w3-text-white w3-wide outline">VISIONARIES</span>
   </div>
 </div>
 
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">WHERE WE WORK </h3>
-  <p class="w3-center"><em>We would love your feedback!</em></p>
+ <h3 class="w3-center">Ken Le - Wild Weebie Webmaster/Heroku Hero</h3>
+ <h3 class="w3-center">Kenny Le - Super Snack Specialist/Supporter of Moral Mortals</h3>
+ <h3 class="w3-center">Ryan Luu - Ambitious Agile Agent/Awaken AWS Ascendent</h3>
+ <h3 class="w3-center">Tony Le - Echo Enchanter/Lambda Lamb</h3>
+    <h3 class="w3-center">Victor Le - Twilio Technical Tweeker</h3><hr>
+  <h3 class="w3-center">Where It Was Conceived </h3>
+  
 
   <div class="w3-row w3-padding-32 w3-section">
    
@@ -170,8 +176,8 @@
     <div class="w3-col m8 w3-panel w3-center">
       <div class="w3-large w3-margin-bottom">
           <br><a href="https://www.lacity.org"><i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i></a>Los Angeles, US<br>
-          <i class="fa fa-phone fa-fw w3-xlarge w3-margin-right"></i> Phone: 1-800-273-8255<br>
-          <a href="mailto:balalalalaaa@yahoo.com"><i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i></a> Email: balalalalaaa@yahoo.com<br>
+          <i class="fa fa-phone fa-fw w3-xlarge w3-margin-right"></i> Suicide Hotline: 1-800-273-8255<br>
+          <!--<a href="mailto:balalalalaaa@yahoo.com"><i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i></a> Email: balalalalaaa@yahoo.com<br>-->
           <a href="https://suicidepreventionlifeline.org" class="lastQuote w3-hover-opacity"><strong><em>When you feel like giving up, just remember the reason why you held on for so long</em></strong></a>
       </div>
     </div>
@@ -191,7 +197,7 @@
 <!-- Add Google Maps -->
 <script>
 function myMap() {
-  myCenter=new google.maps.LatLng(34.052235, -118.243683);
+  myCenter=new google.maps.LatLng(34.0705, -118.4468);
   var mapOptions= {
     center:myCenter,
     zoom:12, scrollwheel: false, draggable: false,
